package smartlib.domain;
// Quick note: I kept the domain code straightforward so the rules are easy to follow.

public enum MembershipType {
    STANDARD,
    PREMIUM,
    STUDENT
}
